adjusted bullet groups

--- a/HTML/Special events.html
+++ b/HTML/Special events.html
@@ -21,30 +21,19 @@
 		</div>
 	</section>
 
-	<section class="background-orange section-circle-dots">
+	<section class="background-orange section-ribbon">
 		<div class="row h-left">
 
 			<div id="education" class="col md-6 sm-12">
 				<div class="special-event-box">
+					<div class="text-label navy">Education event</div>
 					<div class="header-box education bullet-group">
-						<div class="text-label navy">Education event</div>
 						<h3 class="h2 text-medium text-normal">What’s New in 2019</h3>
-					</div>
-					<div class="content-box">
-						<div class="row collapse">
-							<div class="col">
-								<div class="line thick small navy"></div>
-								<p>All user roles can take this class to use the new MicroStrategy 2019 features to explore the connection between an agile environment and the departmental/enterprise environment, within the context of data governance. Use MicroStrategy Workstation to understand the effects of administrative tasks that maximize the value of your MicroStrategy environments and applications. Ensure data integrity and security while you monitor and analyze your environments, users, and data with Platform Analytics. Empower your sales people and executives by connecting to your data with HyperIntelligence, which uses augmented analytics to display information cards on web pages. Write back to your data with actionable analytics, so that decision makers have the information that they need to make the right decision.</p>
-							</div>
-							<div class="col">
-								<!-- <div class="text-label navy outline">Date and time</div> -->
-								<div class="triangle-group navy">
-									<p><strong>Monday, February 4</strong><br>
-									11:45am - 3:45pm</p>
-									<!-- <a href="https://resource.microstrategy.com/Login/login.aspx?ReturnUrl=https://microstrategy.csod.com?link=%252fDeepLink%252fProcessRedirect.aspx%253fmodule%253dlodetails%2526lo%253dfb8a8b73-444f-498c-af16-05c83c1e270c" class="cta-button small blue carat" target="_blank">Session A</a>
-									<a href="https://resource.microstrategy.com/Login/login.aspx?ReturnUrl=https://microstrategy.csod.com?link=%252fDeepLink%252fProcessRedirect.aspx%253fmodule%253dlodetails%2526lo%253d2623b721-1245-4851-8e6c-56993c39df01" class="cta-button small blue carat" target="_blank">Session B</a> -->
-								</div>
-							</div>
+						<p>All user roles can take this class to use the new MicroStrategy 2019 features to explore the connection between an agile environment and the departmental/enterprise environment, within the context of data governance. Use MicroStrategy Workstation to understand the effects of administrative tasks that maximize the value of your MicroStrategy environments and applications. Ensure data integrity and security while you monitor and analyze your environments, users, and data with Platform Analytics. Empower your sales people and executives by connecting to your data with HyperIntelligence, which uses augmented analytics to display information cards on web pages. Write back to your data with actionable analytics, so that decision makers have the information that they need to make the right decision.</p>
+
+						<div class="triangle-group navy">
+							<p><strong>Monday, February 4</strong><br>
+							11:45am - 3:45pm</p>
 						</div>
 					</div>
 				</div>
@@ -52,32 +41,22 @@
 
 			<div id="education" class="col md-6 sm-12">
 				<div class="special-event-box">
+					<div class="text-label navy">Education event</div>
 					<div class="header-box education bullet-group">
-						<div class="text-label navy">Education event</div>
 						<h3 class="h2 text-medium text-normal">Transform Your Data-Driven Organization: The Intelligent Enterprise</h3>
-					</div>
-					<div class="content-box">
-						<div class="row collapse">
-							<div class="col">
-								<div class="line thick small navy"></div>
-								<p>To navigate and thrive in an increasingly complex BI datascape, forward-leaning companies are racing to transform into an Intelligent Enterprise – capable of using data, people, and enterprise assets in aggregated and unique ways. In this class, evaluate where your organization stands today, understand how to establish a foundation for growth, and drive Business Intelligence adoption within your enterprise. Topics covered include data governance, process and change management, enterprise mobility, building your team, and empowering users. At the end of this course, you will be armed with the tools to start transforming your organization into an Intelligent Enterprise as you advance on your personal and enterprise BI journey.</p>
-							</div>
-							<div class="col">
-								<!-- <div class="text-label navy outline">Date and time</div> -->
-								<div class="triangle-group navy">
-									<p><strong>Monday, February 4</strong><br>
-									11:45am - 3:45pm</p>
-									<!-- <a href="https://resource.microstrategy.com/Login/login.aspx?ReturnUrl=https://microstrategy.csod.com?link=%252fDeepLink%252fProcessRedirect.aspx%253fmodule%253dlodetails%2526lo%253dfb8a8b73-444f-498c-af16-05c83c1e270c" class="cta-button small blue carat" target="_blank">Session A</a>
-									<a href="https://resource.microstrategy.com/Login/login.aspx?ReturnUrl=https://microstrategy.csod.com?link=%252fDeepLink%252fProcessRedirect.aspx%253fmodule%253dlodetails%2526lo%253d2623b721-1245-4851-8e6c-56993c39df01" class="cta-button small blue carat" target="_blank">Session B</a> -->
-								</div>
-							</div>
+						<p>To navigate and thrive in an increasingly complex BI datascape, forward-leaning companies are racing to transform into an Intelligent Enterprise – capable of using data, people, and enterprise assets in aggregated and unique ways. In this class, evaluate where your organization stands today, understand how to establish a foundation for growth, and drive Business Intelligence adoption within your enterprise. Topics covered include data governance, process and change management, enterprise mobility, building your team, and empowering users. At the end of this course, you will be armed with the tools to start transforming your organization into an Intelligent Enterprise as you advance on your personal and enterprise BI journey.</p>
+
+						<div class="triangle-group navy">
+							<p><strong>Monday, February 4</strong><br>
+							11:45am - 3:45pm</p>
 						</div>
 					</div>
 				</div>
 			</div>
-		</section>
+		</div>
+	</section>
 
-		<section class="background-blue section-ribbon">
+		<section class="background-blue section-sparse-triangles">
 			<div class="row h-left">
 			<div id="partner-day" class="col background-blue">
 					<div class="special-event-box">
@@ -106,14 +85,12 @@
 
 				<div id="womens-networking" class="col lg-6">
 					<div class="special-event-box">
+						<div class="text-label navy">Networking Event</div>
 						<div class="header-box womens-networking bullet-group">
-							<div class="text-label navy">Networking Event</div>
 							<h3 class="h2 text-medium text-normal">Women's Networking Event</h3>
 						</div>
 						<div class="content-box">
-							<div class="line thick navy small"></div>
 							<p>Join MicroStrategy customers, partners, and employees for appetizers and cocktails as we kick-off MicroStrategy World. Mingle with inspiring women leaders and savvy female executives doing great work and delivering results across the world of&nbsp;Analytics.</p>
-							<div class="text-label navy outline">Date and time</div>
 							<div class="triangle-group navy">
 								<p><strong>Monday, January 15</strong><br>
 								3:30pm - 5:30pm</p>
@@ -124,14 +101,12 @@
 			
 				<div id="welcome-reception" class="col lg-6">
 					<div class="special-event-box">
-						<div class="header-box welcome-reception">
-							<div class="text-label navy">Networking event</div>
+						<div class="text-label navy">Networking event</div>
+						<div class="header-box welcome-reception bullet-group">
 							<h3 class="h2 text-medium text-normal">MicroStrategy World 2018 Welcome&nbsp;Reception</h3>
 						</div>
 						<div class="content-box">
-							<div class="line thick small navy"></div>
 							<p>Welcome to MicroStrategy World 2018! Join industry partners, peers and MicroStrategy executives for drinks and hors d’oeuvres in the Exhibit Hall.  Featured exhibitors will showcase their products and technologies at this important networking event- don’t miss&nbsp;it!</p>
-							<div class="text-label navy outline">Date and time</div>
 							<div class="triangle-group navy margindown10">
 								<p><strong>Monday, January 15</strong><br>
 								6:30pm - 8:30pm</p>
@@ -144,13 +119,13 @@
 		</section>
 
 			
-		<section class="background-navy">
+		<section class="background-navy section-ribbon">
 			<div class="row h-left">
 				
 				<div id="5k" class="col lg-6">
 					<div class="special-event-box">
-						<div class="header-box five-k">
-							<div class="text-label navy">Charity Event</div>
+						<div class="text-label navy">Charity Event</div>
+						<div class="header-box five-k bullet-group">
 							<h3 class="h2 text-medium text-normal">5K run</h3>
 						</div>
 						<div class="content-box">
@@ -165,7 +140,7 @@
 						</div>
 					</div>
 				</div>
-				
+
 			</div>
 		</section>
 
