--- a/HTML/Special events.html
+++ b/HTML/Special events.html
@@ -92,7 +92,7 @@
 						<div class="content-box">
 							<p>Join MicroStrategy customers, partners, and employees for appetizers and cocktails as we kick-off MicroStrategy World. Mingle with inspiring women leaders and savvy female executives doing great work and delivering results across the world of&nbsp;Analytics.</p>
 							<div class="triangle-group navy">
-								<p><strong>Monday, January 15</strong><br>
+								<p><strong>Tuesday, February 5</strong><br>
 								3:30pm - 5:30pm</p>
 							</div>
 						</div>
@@ -108,7 +108,7 @@
 						<div class="content-box">
 							<p>Welcome to MicroStrategy World 2018! Join industry partners, peers and MicroStrategy executives for drinks and hors d’oeuvres in the Exhibit Hall.  Featured exhibitors will showcase their products and technologies at this important networking event- don’t miss&nbsp;it!</p>
 							<div class="triangle-group navy margindown10">
-								<p><strong>Monday, January 15</strong><br>
+								<p><strong>Tuesday, February 5</strong><br>
 								6:30pm - 8:30pm</p>
 							</div>
 						</div>
@@ -134,9 +134,22 @@
 
 							<div class="text-label navy outline">Date and time</div>
 							<div class="triangle-group navy margindown10">
-								<p><strong>Tuesday, January 16</strong><br>
-								6:00am</p>
+								<p><strong>Tuesday, February 5</strong></p>
 							</div>
+						</div>
+					</div>
+				</div>
+				
+				<div id="datathon" class="col lg-6">
+					<div class="special-event-box">
+						<div class="text-label navy">Contest</div>
+						<div class="header-box five-k bullet-group">
+							<h3 class="h2 text-medium text-normal">Datathon 2019</h3>
+							<p>MicroStrategy Datathon 2019 is a competition during the World 2019 conference in Phoenix. Select teams will have the opportunity to face-off and compete using the MicroStrategy platform to create and innovative solution, with the aide of MicroStrategy professionals and specialists.</p>
+							<div class="triangle-group navy margindown10">
+								<p><strong>Monday, February 4 &ndash; 6</strong></p>
+							</div>
+						</div>
 						</div>
 					</div>
 				</div>
