updated new sponsor logo

--- a/HTML/Home.html
+++ b/HTML/Home.html
@@ -562,6 +562,14 @@
 						</a>
 
 					</div>
+					
+					<div class="slide">
+
+						<a href="http://www.datameaning.com/" target="_blank" class="ratio sixteen-nine">
+                    		<img class="logo" src="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/92f07951e6234ada8377a73f0b76e90c.png" alt="Data Meaning logo">
+                		</a>
+
+					</div>
 
 					<div class="slide">
 
