--- a/HTML/sponsors.html
+++ b/HTML/sponsors.html
@@ -88,6 +88,18 @@
             <!--<div class="col md-5 lg-3">Additional Info for booth</div>-->
         </div>
         <div class="row h-left">
+            <div class="col md-5 lg-3">
+                <a href="http://www.datameaning.com/" target="_blank" class="ratio sixteen-nine">
+                    <img class="logo" src="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/92f07951e6234ada8377a73f0b76e90c.png" alt="Data Meaning logo">
+                </a>
+            </div>
+            <div class="col md-7 lg-6">
+                <h6 class="text-uppercase text-bold">Data Meaning</h6>
+                <p><em>Company description coming soon!</em></p>
+            </div>
+            <!--<div class="col md-5 lg-3">Additional Info for booth</div>-->
+        </div>
+        <div class="row h-left">
             <div class="col lg-3 md-4">
                 <a href="https://www.datastrong.com/" target="_blank" class="ratio sixteen-nine">
                     <img class="logo" src="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/0da97e8abfa1420083451ff54b23383d.png" alt="Datastrong logo">
