updated styles and classes

--- a/HTML/Special events.html
+++ b/HTML/Special events.html
@@ -53,6 +53,9 @@
 					</div>
 				</div>
 			</div>
+			<div class="col lg-7">
+					<p><small class="text-normal">* Please be sure to arrive several minutes early and bring your own laptop. To ensure a more personalized learning experience, attendees will be divided into smaller learning groups and moved to separate classrooms.</small></p>
+			</div>
 		</div>
 	</section>
 
