removed cyber week stuff

--- a/HTML/Home.html
+++ b/HTML/Home.html
@@ -43,9 +43,7 @@
 							</p>
 						</div>
 					</div>
-					<div class="col sm-12">
-						<p class="h4 text-normal">Cyber Week is here! Use code <strong class="text-red">MWorld19Cyber</strong> by midnight Friday to save&nbsp;<strong class="text-red">$600</strong></p>
-					</div>
+					
 				</div>
 				<div class="cta-home-group">
 					<a class="cta-button large red carat" href="{[E-RSVP YES URL]}">Register now</a>
@@ -443,29 +441,22 @@
 		</div>
 	</div>
 	<div class="row pricing-wrapper compact v-middle z-2">
-		<div class="col lg-4">
+		<div class="col md-4">
 			<div class="pricing-block current">
-				<span class="type">Cyber Week</span>
-				<span class="price"><span class="currency">$</span>1095</span>
-				<span class="date">Use code <strong class="text-bold text-orange">MWorld19Cyber</strong> by midnight Friday to save&nbsp;<strong class="text-bold text-orange">$600</strong> </span>
-				 <a class="cta-button orange carat" href="{[E-RSVP YES URL]}">Register now</a>
-			</div>
-		</div>
-		<div class="col md-4 lg-2">
-			<div class="pricing-block">
 				<span class="type">Fall Special</span>
 				<span class="price"><span class="currency">$</span>1395</span>
 				<span class="date">Until Dec&nbsp;20, 2018</span>
+				<a class="cta-button orange carat" href="{[E-RSVP YES URL]}">Register now</a>
 			</div>
 		</div>
-		<div class="col md-4 lg-2">
+		<div class="col md-4">
 			<div class="pricing-block">
 				<span class="type">Winter Special</span>
 				<span class="price"><span class="currency">$</span>1495</span>
 				<span class="date">Until Feb&nbsp;3, 2019</span>
 			</div>
 		</div>
-		<div class="col md-4 lg-2">
+		<div class="col md-4">
 			<div class="pricing-block">
 				<span class="type">Onsite Rate</span>
 				<span class="price"><span class="currency">$</span>1695</span>
