updated education event time

--- a/HTML/Special events.html
+++ b/HTML/Special events.html
@@ -33,7 +33,7 @@
 
 						<div class="triangle-group red margin-top-10">
 							<p><strong>Monday, February 4</strong><br>
-							11:45am - 3:45pm</p>
+							11:15am - 3:45pm</p>
 						</div>
 					</div>
 				</div>
@@ -48,13 +48,13 @@
 
 						<div class="triangle-group red margin-top-10">
 							<p><strong>Monday, February 4</strong><br>
-							11:45am - 3:45pm</p>
+							11:15am - 3:45pm</p>
 						</div>
 					</div>
 				</div>
 			</div>
-			<div class="col lg-7">
-					<p><small class="text-normal">* Please be sure to arrive several minutes early and bring your own laptop. To ensure a more personalized learning experience, attendees will be divided into smaller learning groups and moved to separate classrooms.</small></p>
+			<div class="col lg-7 background-red">
+					<p><small class="text-normal">* To ensure a more personalized learning experience, attendees will be divided into smaller learning groups. Approximately one week prior to World 2019, you will receive an email confirmation with your assigned classroom location. Please plan on arriving 30 minutes prior to your start time and bring your own laptop.</small></p>
 			</div>
 		</div>
 	</section>
