updated venue page

--- a/HTML/Venue.html
+++ b/HTML/Venue.html
@@ -1,90 +1,156 @@
-<section id="hero-banner" class="banner sub-page venue above-card">
-	<div class="row h-left">
-		<div class="col lg-9">
-			<div class="line thick tiny orange"></div>
-			<h1 class="text-large">Venue, Travel, and Accommodations</h1>
-		</div>
-	</div>
-</section>
+<!DOCTYPE html>
+<html lang="en">
 
-<section id="venue" class="background-gradient-black">
-	<div class="row in-between-card text-center">
-		<div class="col lg-10 collapse background-light-gray shadow">
-			<div id="map-canvas" class="map-container ratio sixteen-nine"></div>
-			<div class="padding-30">
-				<div class="line thick tiny orange"></div>
-				<h3 class="text-uppercase text-normal marginup5">Accommodations</h3>
-				<p><strong>The nightly room rate is $239, plus taxes and resort fee, single or double occupancy.</strong> To reserve a room, book online or call The Cosmopolitan directly at <a href="tel:702-984-6945">702.984.6945</a> and let them know you are a MicroStrategy World attendee. Rooms at the preferred rate are available until <strong>Wednesday, December 20, 2017</strong> and are based upon availability. After Wednesday, December 20, 2017, any changes to existing room reservations will be accepted based upon space and rate&nbsp;availability.</p>
-				<a class="cta-button orange carat large" href="https://aws.passkey.com/go/SMIRO8" target="_blank">Book your room online</a>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Session New Test</title>
+    <link rel="stylesheet" href="../CSS/main.min.css">
+</head>
+
+<body>
+<div id='venue'>
+
+	<section id="hero-banner" class="background-orange section-stacked-bars">
+		<div class="row h-left">
+			<div class="col lg-9">
+				<div class="bullet-group large z-2">
+					<h1 class="text-large">Venue & Accommodations</h1>
+					<p class="h3">This year MicroStrategy World will be hosted at The Phoenix Convention Center.</p>
+				</div>
 			</div>
 		</div>
+		<div class="pattern-overlay z-0">
+			<img alt="pattern background of stacked bars" class="static-pattern pos-top" src="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/32013585cba040f990a80882f956d983.png" width="847" heigh="515"/>
+		</div>
+	</section>
+
+	<div class="pattern-between row expand collapse">
+		<div class="col release background-pattern pattern-split-circles pattern-small height-small">&nbsp;</div>
+		<div class="col release background-pattern pattern-square-dots pattern-small height-small">&nbsp;</div>
+		<div class="col release background-pattern pattern-sparse-triangles pattern-small height-small">&nbsp;</div>
+		<div class="col release background-pattern pattern-vertical-bars pattern-small height-small">&nbsp;</div>
+		<div class="col release background-pattern pattern-tartan pattern-small height-small">&nbsp;</div>
 	</div>
 
-	<div class="row">
-		<div class="col md-4">
-			<div class="line tiny orange thick"></div>
-			<h3 class="text-uppercase text-normal text-small">Hotel details</h3>
-			<p><strong>The Cosmopolitan of Las Vegas</strong></p>
-			<p>
-				3708 South Las Vegas Boulevard<br>
-				Las Vegas, NV 89109
-			</p>
-			<p>Phone: <a href="tel:702-984-6945" class="text-white">702.984.6945</a></p>
-			<p>Website: <a href="{[E-CUSTOM:event-venue-site]}" class="text-white" target="_blank">{[E-CUSTOM:event-venue-site]}</a></p>
+	<section id="photo-mosaic" class="photo-mosaic no-padding">
+		<div class="row expand collapse photo-row large">
+			<div class="col md-6">
+				<div class="photo venue-main"></div>
+			</div>
+			<div class="col md-6">
+				<div class="photo accomm-main"></div>
+			</div>
 		</div>
-		<div class="col md-4">
-			<div class="line tiny orange thick"></div>
-			<h3 class="text-uppercase text-normal text-small">Venue and travel</h3>
-			<p>This luxury resort and casino is located in the heart of the Las Vegas strip and less than 3 miles from the McCarran International&nbsp;Airport.</p>
-			<p><strong>McCarran International Airport</strong></p>
-			<p>
-				5757 Wayne Newton Blvd,<br>
-				Las Vegas, NV 89119
-			</p>
-		</div>
-		<div class="col md-4">
-			<div class="line tiny orange thick"></div>
-			<h3 class="text-uppercase text-normal text-small">Hotel Attractions</h3>
-			<ul class="triangle-list orange">
-				<li>World-class restaurants and lounges</li>
-				<li>Day/night club</li>
-				<li>Casino</li>
-				<li>Pool/fitness centerr</li>
-				<li>Full service spa</li>
-			</ul>
-		</div>
-	</div>
-</section>
-{[A-CUSTOM TAG:SCRIPT-CUSTOM-MAP]}
+	</section>
 
 
-<section id="photo-mosaic" class="photo-mosaic no-padding">
-	<div class="row expand collapse photo-row tall">
-		<div class="col md-8">
-			<div class="photo main venue-main"></div>
+	<section class="background-orange no-padding section-stacked-bars">
+		<div class="row h-left">
+			<div class="col md-6">
+				<div class="bullet-group">
+					<h3 class="text-uppercase text-normal marginup5">Venue</h3>
+					<p class="h3">Phoenix Convention Center</p>
+					<p>The Phoenix Convention Center is located in the heart of downtown Phoenix and just 4 miles from Sky Harbor International Airport. The center is within walking distance of major convention hotels, shopping, entertainment, sports, theater venues and has its own dedicated stop on the Metro Light Rail line.</p>
+				</div>
+			</div>
+			<div class="col md-6">
+				<div class="bullet-group">
+					<h3 class="text-uppercase text-normal marginup5">Accommodations</h3>
+					<p class="h3">Hyatt Regency Phoenix</p>
+					<P>Located across the street from the Phoenix Convention Center, Hyatt Regency Phoenix places downtown Phoenix at your feet.</P>
+					<p><strong>Discounted room blocks for World 2019 attendees are available. </strong> To reserve a room, book online or call the Hyatt Regency Phoenix hotel at <a href="tel:602-252-1234" class="text-red text-bold">602.252.1234</a> and let them know you are a MicroStrategy World attendee. Rooms at the preferred rate are available and are based upon availability.</p>
+					<a class="cta-button red carat large" href="https://aws.passkey.com/go/SMIRO8" target="_blank">Book your room online</a>
+				</div>
+			</div>
 		</div>
-		<div class="col md-4">
-			<div class="photo half venue-room"></div>
-			<div class="photo half venue-casino"></div>
-		</div>
-	</div>
-</section>
+	</section>
+	<section class="background-navy no-padding section-stacked-bars">
 
-<section id="call-to-action" class="background-gradient-black">
-	<div class="row registration-footer">
-		<div class="col md-8 lg-6">
-			<img src="//www.microstrategy.com/Strategy/media/external-assets/events-support/world-2018/world2018-logo_DARK.svg">
+		<div class="row margin-top-30 padding-30">
+			<div class="col md-6">
+				<div class="line tiny blue thick"></div>
+				<h3 class="text-uppercase text-normal text-small">Venue and travel</h3>
+				<p>The Phoenix Convention Center is four miles from <a class="text-white" href="https://www.skyharbor.com/">Sky Harbor International Airport</a>. Guests flying into Phoenix have multiple transportation options, including the Metro Light Rail, which has dedicated stops at the Convention Center.</p>
+				<p><strong>Sky Harbor International Airport</strong></p>
+				<p>2485 E Buckeye Rd,<br> Phoenix, AZ 85034</p>
+			</div>
+			<div class="col md-6">
+				<div class="line tiny blue thick"></div>
+				<h3 class="text-uppercase text-normal text-small">Hotel details & Amenities</h3>
+				<p><strong>Hyatt Regency Phoenix</strong></p>
+				<p>122 North Second Street <br> Phoenix, Arizona, 85004</p>
+				<p>Phone: <a href="tel:602-252-1234" class="text-white">602.252.1234</a></p>
+				<p>Fax: <a href="tel:602-254-9472" class="text-white">602.254.9472</a></p>
+				<p>Website: <a href="https://www.hyatt.com/en-US/hotel/arizona/hyatt-regency-phoenix/phxrp" class="text-white" target="_blank">Hyatt Regency Phoenix</a></p>
+
+				<ul class="triangle-list orange">
+					<li>Rooftop pool and hot tub with sun deck</li>
+					<li>24-hour StayFit™ gym</li>
+					<li>Pool/fitness centerr</li>
+					<li>Three dining outlets, including the revolving Compass Lounge and Restaurant</li>
+				</ul>
+			</div>
 		</div>
-		<div class="col text-col text-center">
-			<p class="h3 text-uppercase text-normal">January 15-17, 2018 | Las Vegas, Nevada</p>
+	</section>
+	<section id="photo-mosaic" class="photo-mosaic no-padding">
+		<div class="row expand collapse photo-row short">
+			<div class="col">
+				<div class="photo phoenix-city-landscape"></div>
+			</div>
 		</div>
-		<div class="col md-6 lg-4">
-			<a class="cta-button large white expand" href="{[E-RSVP YES URL]}">Register now</a>
+		
+	</section>
+
+	<section id="call-to-action">
+		<div class="final-cta">
+			<div class="row">
+				<img src="http://www.microstrategy.com/Strategy/media/images/logos/branding/world2019-wht-logo.svg"
+					alt="World 2019 white logo" width="0" height="0">
+			</div>
+			<a class="cta-button large red expand" href="{[E-RSVP YES URL]}">Register now</a>
 		</div>
-	</div>
-</section>
+
+		<div class="final-date">
+			<div class="icon-lockup text-white">
+				<img alt="date icon" class="icon" src="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/e1bbbb629eb34c34b6462bbb28612345.png"
+					width="32" height="32">
+				<p>
+					<strong class="text-uppercase text-bold text-white">February</strong>
+					4th – 6th 2019
+				</p>
+			</div>
+			<div class="icon-lockup text-white">
+				<img alt="location icon" class="icon" src="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/0a1ac4e6db4c4a61834db54ffeebff71.png"
+					width="32" height="32">
+				<p>
+					<strong class="text-uppercase text-bold text-white">Phoenix, Arizona</strong>
+					Phoenix Convention Center
+				</p>
+			</div>
+		</div>
+	</section>
+</div>
 
 <style>
-	.register-btn-bottom {display:none;}
-	div.bottom {padding:0;}
+	.register-btn-bottom {
+		display: none;
+	}
+
+	div.bottom {
+		padding: 0;
+	}
+
+	.jplist-hidden {
+		display: none !important;
+	}
+
+	.tabs-menu {
+		padding-bottom: 0px;
+	}
 </style>
+
+</body>
+
+</html>
